[gd_scene load_steps=2 format=2]

[ext_resource path="res://screens/MainScreen.gd" type="Script" id=1]

[node name="MainScreen" type="Node2D"]
script = ExtResource( 1 )

[node name="CanvasLayer" type="CanvasLayer" parent="."]

[node name="ColorRect" type="ColorRect" parent="CanvasLayer"]
anchor_right = 1.0
anchor_bottom = 1.0
mouse_filter = 2
color = Color( 0.117647, 0.117647, 0.117647, 1 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="VBoxContainer" type="VBoxContainer" parent="CanvasLayer"]
anchor_right = 1.0
anchor_bottom = 1.0
margin_left = 10.0
margin_top = 10.0
margin_right = -10.0
margin_bottom = -10.0
custom_constants/separation = 10
__meta__ = {
"_edit_use_anchors_": false
}

[node name="OutputContainer" type="MarginContainer" parent="CanvasLayer/VBoxContainer"]
margin_right = 1580.0
margin_bottom = 696.0
mouse_filter = 2
size_flags_horizontal = 3
size_flags_vertical = 3
size_flags_stretch_ratio = 0.8
__meta__ = {
"_edit_use_anchors_": false
}

[node name="QueryResults" type="ItemList" parent="CanvasLayer/VBoxContainer/OutputContainer"]
margin_right = 1580.0
margin_bottom = 696.0
focus_mode = 0
size_flags_horizontal = 3
size_flags_vertical = 3
select_mode = 1
allow_rmb_select = true
auto_height = true
same_column_width = true

[node name="InputContainer" type="MarginContainer" parent="CanvasLayer/VBoxContainer"]
margin_top = 706.0
margin_right = 1580.0
margin_bottom = 880.0
mouse_filter = 2
size_flags_horizontal = 3
size_flags_vertical = 3
size_flags_stretch_ratio = 0.2
__meta__ = {
"_edit_use_anchors_": false
}

[node name="HBoxContainer" type="HBoxContainer" parent="CanvasLayer/VBoxContainer/InputContainer"]
margin_right = 1580.0
margin_bottom = 174.0

[node name="InputTypeButton" type="OptionButton" parent="CanvasLayer/VBoxContainer/InputContainer/HBoxContainer"]
margin_right = 130.0
margin_bottom = 174.0
focus_mode = 0
size_flags_horizontal = 3
size_flags_stretch_ratio = 0.1
text = "Raw"
align = 1
items = [ "Raw", null, false, 0, null, "Structured", null, false, 1, null ]
selected = 0

[node name="RawInputTextEdit" type="TextEdit" parent="CanvasLayer/VBoxContainer/InputContainer/HBoxContainer"]
margin_left = 134.0
margin_right = 1444.0
margin_bottom = 174.0
size_flags_horizontal = 3
size_flags_vertical = 3

[node name="StructuredContainer" type="HBoxContainer" parent="CanvasLayer/VBoxContainer/InputContainer/HBoxContainer"]
visible = false
margin_left = 792.0
margin_right = 1504.0
margin_bottom = 174.0
size_flags_horizontal = 3
size_flags_vertical = 3

[node name="InputButton" type="Button" parent="CanvasLayer/VBoxContainer/InputContainer/HBoxContainer"]
margin_left = 1448.0
margin_right = 1580.0
margin_bottom = 174.0
focus_mode = 0
size_flags_horizontal = 3
size_flags_vertical = 3
size_flags_stretch_ratio = 0.1
text = "Send"
